--- a/css/register.css
+++ b/css/register.css
@@ -1,29 +1,25 @@
-.main {
-    padding: 40px;
-    opacity: 0.9;
-    /* font-family: FreeMono; */
-    color: rgb(45, 29, 88);
-    text-align: center;
-    background-color: white;
-    margin: 50px 300px;
-}
-.main form {
+
+
+body form {
+    margin: 20px;
     display: inline-block;
     text-align: left;
     font-size: 18px;
     font-weight: 570;
     margin-bottom: 40px;
+    
 }
-.main form input{
+body form input{
     margin: 10px;
     height: 25px;
     width: 300px;
 }
 
-.main form button{
+body form button{
     margin-left: 7%;
     margin-right: 30%;
-    background-color: lightskyblue;
+    opacity: 1;
+    background-color: #ff6f61;
     display: inline-block;
     /* font-family: FreeMono; */
     border: 0ch;
@@ -31,7 +27,17 @@
     font-size: 18px;
     font-weight: 570;
     height: 30px;
-
-    color: rgb(45, 29, 88);
     width: 270px;
+}
+
+body .forma {
+    padding: 40px;
+    opacity: 0.75;
+    /* font-family: FreeMono; */
+    text-align: center;
+    margin: 50px 300px;
+    background-color: white;
+    border: 0;
+    /* border-radius: 30px; */
+    
 }
