--- a/css/body.css
+++ b/css/body.css
@@ -3,6 +3,7 @@ body {
     background-position: 0px -100px;
     background-size: 100%;
     background-image: url(../img/background.jpg);
+    background-color: #211E29;
     font-family: Arial, Helvetica, sans-serif;
     background-repeat: no-repeat;
     background-attachment: fixed;
