--- a/angular/src/app/components/news/news.component.html
+++ b/angular/src/app/components/news/news.component.html
@@ -1,3 +1,26 @@
 <p>
-  news works!
+      <div class="main">
+    <ul>
+        <li>
+            Новость 1
+           <div class="blogbody">
+            Тело Новости 1
+           </div>
+        </li>
+        <li>
+                Новость 2
+               <div class="blogbody">
+                Тело Новости 2
+               </div>
+        </li>
+        <li>
+                Новость 3
+               <div class="blogbody">
+                Тело Новости 3
+               </div>
+        </li>
+
+            
+    </ul>
+    </div>
 </p>
