--- a/angular/src/app/components/info/info.component.html
+++ b/angular/src/app/components/info/info.component.html
@@ -1,3 +1,6 @@
-<p>
-  info works!
-</p>
+<div class="main" id="all_text">
+  <h2 id="about"> О проекте</h2>
+  <p class="text">
+          Мы хотели бы создать сайт FIThub, который будет включать в себя полное расписание студентов и всех преподавателей кбту; перечень свободных кабинетов; более удобное распределение файлов/линков и просто инфы для студентов ( т.к сейчас в Uninet, файлы просто в общей куча находятся ); небольшой аналог форума, где можно будет не спрашивать в сотый раз вопросы, а искать треды где уже были данны ответы;  будет доска для новостей и объявление от администраций; можно дать инфу по времени/месте работ определенных центров/институтов и может быть карту, удобную для первашей.
+  </p>
+</div>
