added authorisation window

--- a/angular/src/app/components/auth/auth.component.html
+++ b/angular/src/app/components/auth/auth.component.html
@@ -1,3 +1,17 @@
-<p>
-  auth works!
-</p>
+
+<div id="lgb">
+<div id="login-box">
+  <form action="" method="get">
+          <label for="lb-username"> Логин: </label>
+      <input id="lb-username" type="text">
+      <br>
+      <label for="lb-password"> Пароль: </label>
+      <input id="lb-password" type="password">
+      <br>
+      <button id="lb-submit-btn" type="submit"> Вход</button>
+  </form>
+
+  <a href='register'>Зарегистрироваться </a>
+
+</div>
+</div>
