--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -15,6 +15,7 @@ html {
     min-height: 100%;
 }
 body {
+    /* display: inline-block; */
     margin: 0 0 100px; /* bottom = .footer height */
 }
 
