--- a/angular/src/app/components/class/class.component.html
+++ b/angular/src/app/components/class/class.component.html
@@ -2,71 +2,59 @@
   <div class="fullbody">
   <div class="subjects">
 
-    
-      <!-- <ul *ngFor="let course of courses">
-        <h2>Name: {{course.name}}</h2>
-        <br>
-        Description: {{course.description}}
-        <br>
-        <span style="color: red" > Удалить</span>
-        <span style="color: green" > Изменить</span>
-
-      </ul> -->
-        <ng-container *ngIf="!isLogged">
-          <div>
-            <div>
-              <input type="text" placeholder="Login" [(ngModel)]="login"/>
-            </div>
-            <div>
-              <input type="password" placeholder="Password" [(ngModel)]="password"/>
-            </div>
-            <div>
-              <button (click)="auth()">Log in</button>
-            </div>
-          </div>
-  </ng-container>
-        
-
-  <ng-container *ngIf="isLogged">
+<ng-container *ngIf="isLogged">
       
   <!-- <ng-container > -->
 
-      <h2>i luv u tolkyn  </h2>
-
-
+        <h1> Your courses :</h1>
+          <h4>
           <div *ngFor="let c of courses">
-              Name : <input type="text" [(ngModel)]="c.name" >
+              Name : {{c.name}}
               <br>
-              Description : <input type="text" [(ngModel)]="c.description" >
+              Description : {{c.description}}
               <br>
               <span style="color: red" (click)="deleteCourse(c)"> Удалить</span>
-              <span style="color: green" (click)="updateCourse(c)"> Изменить</span>
+              <span style="color: green" (click)="edit(c)"> Изменить</span>
               <br>
           </div>
+          <br>
+        </h4>
 
       <div>
-          CREATE COURSE:
-      <div>
-          <input type="text" [(ngModel)]="name" />
-          <input type="text" [(ngModel)]="description" />
-          <button (click)="createCourse()">Create</button>
-      </div>
+          <ng-container *ngIf="ifEditing">
+              <h3>Edit Course</h3>
+              Name : <input type="text" [(ngModel)]="edited.name" >
+              <br>
+              Description : <input type="text" [(ngModel)]="edited.description" >
+              <br>
+              <button (click)="updateCourse(edited)">
+                OK
+              </button>
+          </ng-container>
+        <br>
+        <br>
+
+          <h3>Create Course:</h3>
+        <div>
+            
+
+
+            Name: <input type="text" [(ngModel)]="name" />
+            <br>
+            Description: <input type="text" [(ngModel)]="description" />
+            <br>
+            <button (click)="createCourse()">Create</button>
+        </div>
 
       
       </div>
       <br>
-      <div>
-          <button (click)="logout()">Log out</button>
-      </div>
+      
           
   </ng-container>
     </div>
 
-  <div class="rootpage">
-      <div class="links">
-      </div>
-      
-  </div>
+ 
 
 </div>
 </div>
