--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <app-auth></app-auth>
 
-<app-class></app-class>
+<!-- <app-class></app-class> -->
 <router-outlet></router-outlet>
 
 <app-footer></app-footer>
