--- a/angular/src/app/components/news/news.component.css
+++ b/angular/src/app/components/news/news.component.css
@@ -1,8 +1,9 @@
 .main{
     position: relative;
+    top:-200px;
     width: 500px;
     border: 4px solid lightcyan;
-    height: 500px;
+    height: 570px;
     margin: 50px 300px;
     background-color: antiquewhite;
     border: 3px darkcyan solid;
@@ -16,10 +17,43 @@ li{
 ul{
     list-style: none;
 }
+
+.hr_cut {
+    height: 5px;
+    background: #F0F0F0;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset;
+    width: 405px;
+}
+
+button {
+    width: 100px;
+    height: 26px;
+    background-color: #555555;
+    border-radius: 5px;
+    border: 1px solid black;
+    color: white;
+    padding: 1px 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    padding: 5px;
+    font-family: 'Courier New', Courier, monospace
+}
+button:hover {
+    background-color: black;
+    color: whitesmoke;
+}
+
+#next {
+    position: relative;
+    left: 300px;
+}
+
 .blogbody{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 400px;
-    border: 2px dashed lightblue;
-    margin: 10px 0px;
+
     font-weight: 100;
+    height: 120px;
 } 
