--- a/angular/src/app/components/class/class.component.html
+++ b/angular/src/app/components/class/class.component.html
@@ -1,3 +1,5 @@
+<!-- <ng-container *ngIf="!ifSelectedCourse"> -->
+
 <div class="mainp">
   <div class="fullbody">
   <div class="subjects">
@@ -53,3 +55,11 @@
 
 </div>
 </div>
+<!-- </ng-container> -->
+
+
+<!-- <ng-container *ngIf="ifSelectedCourse">
+
+<app-course> </app-course>
+
+</ng-container> -->
