--- a/angular/src/app/components/info/info.component.css
+++ b/angular/src/app/components/info/info.component.css
@@ -1,4 +1,4 @@
-#about{
+/* #about{
     color: navy;
     font-size: 35px;
     text-align: center;
@@ -17,4 +17,4 @@ p{
     background-color: antiquewhite;
     border: 3px darkcyan solid;
     border-radius: 30px;
-} 
+}  */
