--- a/angular/src/app/components/header/header.component.css
+++ b/angular/src/app/components/header/header.component.css
@@ -8,7 +8,7 @@
 .all {
     background-color: #ff6f61;
     font-family: Arial, Helvetica, sans-serif;
-    height: 20px;
+    height: 10%;
     padding-left: 3%;
     padding-top: 2.6%;
 }
