--- a/angular/src/app/components/header/header.component.html
+++ b/angular/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
 
 <div class="all">
     
-    <a href="index.html"> <h1>FIThub.com</h1> </a>
+    <a href="index.html"> <h1 class="fh">FIThub.com</h1> </a>
       <div class="doptext">
               <a href="class"> Subjects </a> |
               <a href="info"> Info </a> |
@@ -15,3 +15,31 @@
         </div>
 
 </div>
+ 
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">FITHub</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarColor03">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Subjects <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav> -->
