--- a/angular/src/app/components/auth/auth.component.html
+++ b/angular/src/app/components/auth/auth.component.html
@@ -11,16 +11,17 @@
       <input id="lb-password" type="password" [(ngModel)]="password">
       <br>
       <button id="lb-submit-btn" (click)="auth()"> Вход</button>
+      <br>
+      <a href='register'>Зарегистрироваться </a>
     </ng-container> 
     <ng-container *ngIf="isLogged">
+        <h3>Hello, {{current_studentfname}} {{current_studentsname}}!</h3>
         <button (click)="logout()">Log out</button>
-
     </ng-container>
     
   </div>
 
 
-  <a href='register'>Зарегистрироваться </a>
 
 </div>
 </div>
