--- a/angular/src/app/components/class/class.component.css
+++ b/angular/src/app/components/class/class.component.css
@@ -5,7 +5,7 @@
     border: 3px darkcyan solid;
     border-radius: 15px;
     margin: 50px 300px;
-    background-color: antiquewhite;
+    background-color: #221F2A;
     border: 3px darkcyan solid;
     border-radius: 30px;
 
@@ -49,10 +49,26 @@ h1 {
     top: 50px;
     width: 300px;
     padding: 2px;
-    border: 2px solid cyan;
+    border: 2px solid #ff6f61;
+    background-color: #ff6f61;
+    border-radius: 2px;
 }
 #courses {
     position: relative;
-    top: -100px;
+    top: -90px;
     left: 400px;
+}
+.coursesu a{
+    font-size: 20px;
+    margin-left: 10px;
+}
+.coursesu span{
+    font-size: 20px;
+    margin-left: 10px;
+}
+.registerbuttons {
+    border-radius: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: red;
+    color: white;
 }
