--- a/angular/src/app/components/header/header.component.html
+++ b/angular/src/app/components/header/header.component.html
@@ -11,7 +11,9 @@
       <div class="doptext">
               <a href="class"> Subjects </a> |
               <a href="info"> Info </a> |
-              <a href="news"> News </a>
+              <a href="news"> News </a> |
+              <a href="rooms"> Rooms </a> |
+              <a href="schedule"> Schedule </a>
         </div>
 
 </div>
