--- a/angular/src/app/components/class/class.component.css
+++ b/angular/src/app/components/class/class.component.css
@@ -55,7 +55,8 @@ h1 {
 }
 #courses {
     position: relative;
-    top: -90px;
+    top: -180px;
+    margin-top: 20px;
     left: 400px;
 }
 .coursesu a{
