--- a/angular/src/app/components/class/class.component.html
+++ b/angular/src/app/components/class/class.component.html
@@ -1,65 +1,54 @@
 <!-- <ng-container *ngIf="!ifSelectedCourse"> -->
 
 <div class="mainp">
-  <div class="fullbody">
-  <div class="subjects">
-
-<ng-container *ngIf="isLogged">
-      
-  <!-- <ng-container > -->
-      <div id="roflmao">
-          <h3>Create Course:</h3>
-            Name: <input type="text" [(ngModel)]="name" />
-            <br>
-            Description: <input type="text" [(ngModel)]="description" />
-            <br>
-            <button (click)="createCourse()">Create</button>
-        </div>
-        <div style="position: relative; top: 100px;">
-            <ng-container *ngIf="ifEditing">
-                <h3>Edit Course</h3>
-                Name : <input type="text" [(ngModel)]="edited.name" >
-                <br>
-                Description : <input type="text" [(ngModel)]="edited.description" >
-                <br>
-                <button (click)="updateCourse(edited)">
-                  OK
-                </button>
-            </ng-container>
-        </div>
-      <div id="courses" style="position: relative;">
-        <h1> Your courses :</h1>
-        
-          <h4>
-          <div *ngFor="let c of courses" style="border: 2px solid lightblue; width: 300px; margin: 5px 0;">
-              <a (click)="rememberCourseMethod" (click)="sendMessageByService"  href="course"  >Name : {{c.name}}</a>
-              <br>
-              Description : {{c.description}}
-              <br>
+  <div class="jumbotron" style="width:750px; position: absolute; top: 100px; left: -10%; min-height: 600px">
+    <div class="subjects">
+      <ng-container *ngIf="isLogged">
+        <div style="max-width: 25rem;" id="courses" style="position: relative;">
+          <div class="list-group" style="  margin: 5px 0;">
+            <h2 class=""> Your courses :</h2>
+            <div *ngFor="let c of courses" style=" width: 300px;;"
+              class="list-group-item list-group-item-action flex-column align-items-start">
+              <a class="d-flex w-100 justify-content-between" (click)="rememberCourseMethod"
+                (click)="sendMessageByService" href="course">
+                <h5 class="mb-1"> {{c.name}}</h5>
+              </a>
+              <p class="mb-1">{{c.description}}</p>
               <span style="color: red" (click)="deleteCourse(c)"> Удалить</span>
               <span style="color: green" (click)="edit(c)"> Изменить</span>
               <br>
+            </div>
+            <br>
           </div>
-          <br>
-        </h4>
         </div>
-        
-      
-      <br>
-      
-          
-  </ng-container>
+        <div id="roflmao" class="card border-primary mb-3" style="max-width: 25rem; position: absolute;">
+          <div class="card-header">
+            <h4 class="card-title">Create Course:</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text"> Name:</p> <input type="text" [(ngModel)]="name" class="form-control" />
+            <br>
+            <p class="card-text"> Description:</p> <input type="text" [(ngModel)]="description" class="form-control" />
+            <br>
+            <button (click)="createCourse()" class="btn btn-primary">Create</button>
+          </div>
+        </div>
+
+
+        <div style="position: absolute; top: 400px; left: 30px;">
+          <ng-container *ngIf="ifEditing">
+            <h3>Edit Course</h3>
+            Name : <input type="text" [(ngModel)]="edited.name">
+            <br>
+            Description : <input type="text" [(ngModel)]="edited.description">
+            <br>
+            <button (click)="updateCourse(edited)">
+              OK
+            </button>
+          </ng-container>
+        </div>
+        <br>
+      </ng-container>
     </div>
-
- 
-
+  </div>
 </div>
-</div>
-<!-- </ng-container> -->
-
-
-<!-- <ng-container *ngIf="ifSelectedCourse">
-
-<app-course> </app-course>
-
-</ng-container> -->
