--- a/angular/src/app/components/auth/auth.component.html
+++ b/angular/src/app/components/auth/auth.component.html
@@ -1,26 +1,27 @@
 
 <div id="lgb">
-<div id="login-box" class="jumbotron">
+<div id="login-box">
   <div >
-    <ng-container *ngIf="!isLogged" class="form-group">
+    <ng-container *ngIf="!isLogged">
       
       <label for="lb-username"> Логин: </label>
-      <input id="lb-username" type="text" [(ngModel)]="login" class="form-control" placeholder="Username">
+      <input id="lb-username" type="text" [(ngModel)]="login">
       <br>
       <label for="lb-password"> Пароль: </label>
-      <input id="lb-password" type="password" [(ngModel)]="password" class="form-control" placeholder="Password">
+      <input id="lb-password" type="password" [(ngModel)]="password">
       <br>
-      <button id="lb-submit-btn" (click)="auth()" class="btn btn-primary"> Login </button>
+      <button id="lb-submit-btn" (click)="auth()"> Вход</button>
+      <br>
+      <a href='register'>Зарегистрироваться </a>
     </ng-container> 
     <ng-container *ngIf="isLogged">
-        <button (click)="logout()" class="btn btn-primary">Log out</button>
-
+        <h3>Hello, {{current_studentfname}} {{current_studentsname}}!</h3>
+        <button (click)="logout()">Log out</button>
     </ng-container>
     
   </div>
 
 
-  <a href='register'>Зарегистрироваться </a>
 
 </div>
 </div>
