--- a/angular/src/app/components/class/class.component.css
+++ b/angular/src/app/components/class/class.component.css
@@ -1,13 +1,13 @@
-.jumbotron {
+.fullbody {
     margin-top: 20px;
     padding-left: 2%;
-    /* background-color: antiquewhite;
+    background-color: antiquewhite;
     border: 3px darkcyan solid;
-    border-radius: 15px; */
+    border-radius: 15px;
     margin: 50px 300px;
-    /* background-color: antiquewhite;
+    background-color: #221F2A;
     border: 3px darkcyan solid;
-    border-radius: 30px; */
+    border-radius: 30px;
 
 }
 h1 {
@@ -45,16 +45,31 @@ h1 {
 }
 
 #roflmao {
-    position: absolute;
-    top: 55px;
-    left: 30px;
+    position: relative;
+    top: 50px;
     width: 300px;
-    /* padding: 2px; */
-    /* border: 2px solid cyan; */
+    padding: 2px;
+    border: 2px solid #ff6f61;
+    background-color: #ff6f61;
+    border-radius: 2px;
 }
 #courses {
-    position: absolute;
-    width: 450px;
-    top: -20px;
-    left: 350px;
+    position: relative;
+    top: -180px;
+    margin-top: 20px;
+    left: 400px;
+}
+.coursesu a{
+    font-size: 20px;
+    margin-left: 10px;
+}
+.coursesu span{
+    font-size: 20px;
+    margin-left: 10px;
+}
+.registerbuttons {
+    border-radius: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: red;
+    color: white;
 }
