--- a/angular/src/app/components/footer/footer.component.css
+++ b/angular/src/app/components/footer/footer.component.css
@@ -4,7 +4,7 @@
     background-color: #ff6f61;
     position: absolute;
     left: 0;
-    bottom: -5px;
+    bottom: 0;
     height: 30px;
     width: 100%;
 }
