--- a/angular/src/app/components/schedule1/schedule1.component.css
+++ b/angular/src/app/components/schedule1/schedule1.component.css
@@ -15,3 +15,8 @@
     background-color: red;
     color: white;
 }
+#llist{
+    background-color: #ff6f61;
+    border: 2px solid red;
+    margin-top: 5px;
+}
